# GotoViewRework

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  bxdf.cpp  error.cpp  main.cpp  transform.cpp  vec3.cpp
src/include/: aabb.hpp  bxdf.hpp  efloat.hpp  error.hpp  ray.hpp  transform.hpp  utility.hpp  vec3.hpp
